[gd_scene load_steps=18 format=3 uid="uid://bnfy2ihtvu6xx"]

[ext_resource type="Script" path="res://Scenes/Lobby/Lobby.gd" id="1_t7f2o"]
[ext_resource type="Texture2D" uid="uid://bv0w04j8twa6k" path="res://Scenes/Lobby/formstack.png" id="2_2t7fx"]
[ext_resource type="FontFile" uid="uid://d2a5cbt4cly6k" path="res://Font/Pixellari.ttf" id="2_8hyq3"]
[ext_resource type="PackedScene" uid="uid://d27keetkmapul" path="res://Scenes/Arena/Arena.tscn" id="2_cyuyj"]
[ext_resource type="Texture2D" uid="uid://dx16qmbvp3eih" path="res://Scenes/Lobby/table2.png" id="2_shrqe"]
[ext_resource type="PackedScene" uid="uid://3wb30ss8or2c" path="res://Scenes/ShoePicker/ShoePicker.tscn" id="3_t18j3"]
[ext_resource type="FontFile" uid="uid://teimplwodatw" path="res://Font/Creattion Demo.otf" id="4_a3gxt"]
[ext_resource type="Texture2D" uid="uid://5l4pf28t2u2p" path="res://Scenes/Lobby/ticket.png" id="5_7p88y"]
[ext_resource type="PackedScene" uid="uid://vf5s2omfe0fi" path="res://Scenes/TicketHander/TicketHander.tscn" id="9_n25hv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_du8bq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w187m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1m65v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tum1k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ktvdn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nddw0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ad0gc"]

[sub_resource type="LabelSettings" id="LabelSettings_2gqk6"]
font = ExtResource("2_8hyq3")
font_size = 10
font_color = Color(0, 0, 0, 1)

[node name="Lobby" type="Node2D"]
texture_filter = 1
script = ExtResource("1_t7f2o")

[node name="Main" parent="." instance=ExtResource("2_cyuyj")]

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 3

[node name="ShoePicker" parent="CanvasLayer2" instance=ExtResource("3_t18j3")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 4
follow_viewport_enabled = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = -16.0
offset_top = -7.0
offset_right = 335.0
offset_bottom = 192.0
color = Color(0.141176, 0.101961, 0.145098, 1)

[node name="Menu" type="Node2D" parent="CanvasLayer"]
position = Vector2(44, 0)

[node name="Table2" type="Sprite2D" parent="CanvasLayer/Menu"]
position = Vector2(118, 90)
scale = Vector2(0.382221, 0.382221)
texture = ExtResource("2_shrqe")

[node name="FormStack" type="Node2D" parent="CanvasLayer/Menu"]
position = Vector2(56, 5)

[node name="Formstack" type="Sprite2D" parent="CanvasLayer/Menu/FormStack"]
position = Vector2(63, 86)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_2t7fx")

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/Menu/FormStack"]
offset_left = 13.0
offset_top = 120.0
offset_right = 94.0
offset_bottom = 133.0
rotation = 0.0925025
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/selection_color = Color(0, 0, 0, 1)
theme_override_colors/clear_button_color = Color(0, 0, 0, 1)
theme_override_colors/clear_button_color_pressed = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_a3gxt")
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxEmpty_du8bq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_w187m")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_1m65v")
alignment = 1
max_length = 10

[node name="Button" type="Button" parent="CanvasLayer/Menu/FormStack"]
offset_left = 9.0
offset_top = 136.0
offset_right = 15.0
offset_bottom = 142.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_tum1k")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ktvdn")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_nddw0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ad0gc")
disabled = true

[node name="Ticket" type="Sprite2D" parent="CanvasLayer/Menu"]
visible = false
position = Vector2(285, 28)
texture = ExtResource("5_7p88y")

[node name="Label" type="Label" parent="CanvasLayer/Menu/Ticket"]
offset_left = -11.0
offset_top = -6.0
offset_right = 10.0
offset_bottom = 14.0
text = "12"
label_settings = SubResource("LabelSettings_2gqk6")
horizontal_alignment = 1

[node name="CanvasLayer3" type="CanvasLayer" parent="."]
layer = 2

[node name="TicketHander" parent="CanvasLayer3" instance=ExtResource("9_n25hv")]

[connection signal="pressed" from="CanvasLayer2/ShoePicker/Button" to="." method="onShoePickerEnd"]
[connection signal="text_changed" from="CanvasLayer/Menu/FormStack/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="CanvasLayer/Menu/FormStack/Button" to="." method="_on_button_pressed"]

[editable path="CanvasLayer2/ShoePicker"]
